fixup! Merge pull request #45 from AsebWebDev/align-colors

--- a/client/src/components/Scorebox/ScoreTabs/ScoreTabs.scss
+++ b/client/src/components/Scorebox/ScoreTabs/ScoreTabs.scss
@@ -32,6 +32,10 @@
     .bold-text {
         font-weight: bolder;
     }
+
+    td.time{
+        color: $main-grey;
+    }
 }
 
 @include mobile {
